# UniversalFluxInterface

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
docs/: API_Documentation.md  Amiga_DB23_Adapter_Cable.md  BOM.md  BOM_Detailed.md  Boot_Control.md  Compact_Design_Analysis.md  Cost_Analysis.md  Expansion_Header_Specification.md  GB_GBA_Cartridge_Module.md  GB_GBA_USB_Dumper.md  GB_GBA_USB_Standalone_Module.md  Hardware_Test_Procedures.md  MIG_Dumper_Integration.md  MIG_System_Analysis.md  Manufacturing_Guide.md  Module_Cable_Specifications.md  PCB_Design_Rules.md  PCB_Production_Checklist.md  PC_Program_Concept.md  Production_Preparation.md  Software_Architecture.md  Switch_Cartridge_Module_Outline.md  System_Architecture.md  UFI_Code_Review.md  UFI_Modular_Design.md  USB_Protocol_Specification.md
docs/images/: .gitkeep  ufi_logo.png.txt
firmware/: CMakeLists.txt  STM32H723ZGTX_FLASH.ld
firmware/include/: stm32h7xx_hal_conf.h  ufi_firmware.h  ufi_fixes.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
firmware/src/: stm32h7xx_it.c  system_stm32h7xx.c  ufi_clock.c  ufi_debug.c  ufi_drive.c  ufi_flux.c  ufi_iec.c  ufi_main.c  ufi_usb.c  ufi_write.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
kicad/: CM5_Interface.kicad_sch  FDD_Connectors.kicad_sch  Flux_Interface.kicad_sch  GB_GBA_Dumper.kicad_pcb  GB_GBA_Module.kicad_pro  GB_GBA_Module.kicad_sch  GB_GBA_Module_Complete.kicad_sch  GB_GBA_USB_Standalone.kicad_sch  IEC_Bus.kicad_sch  MIG_Dumper.kicad_pcb  Power_Management.kicad_sch  STM32H723_Core.kicad_sch  UFI.kicad_pcb  UFI.kicad_pro  UFI.kicad_sch  UFI_Compact.kicad_pcb  UFI_Compact.kicad_pro  UFI_Headless.kicad_pcb  UFI_Headless.kicad_pro  UFI_Mainboard.kicad_pcb  UFI_Modular.kicad_pcb  UFI_Modular.kicad_pro  fp-lib-table
kicad/GB_GBA_USB_Dumper/: GB_GBA_USB_Dumper.kicad_pro  GB_GBA_USB_Dumper.kicad_sch
kicad/footprints/: Amiga_FDD_Header_2x12.kicad_mod  Apple_Disk_II_19pin.kicad_mod  DIN-6_Female_PCB.kicad_mod  DSUB-23_Female_Horizontal.kicad_mod  FDD_Header_34pin.kicad_mod  GBA_Cartridge_Slot.kicad_mod  GameBoy_Cartridge_Slot.kicad_mod  Hirose_DF40C-100DP-0.4V.kicad_mod  LQFP-144_20x20mm_P0.5mm.kicad_mod  M.2_Key_M_2242.kicad_mod  M.2_Key_M_2280.kicad_mod  RJ45_Magjack_Tab-Down.kicad_mod  RP2040-QFN-56.kicad_mod  UFI_Expansion_Header_40pin.kicad_mod  UFI_Module_Port_2x5.kicad_mod  USB_C_Receptacle_HRO_TYPE-C-31-M-12.kicad_mod
kicad/production/: GB_GBA_Dumper_BOM.csv  GB_GBA_Dumper_CPL.csv  MIG_Dumper_BOM.csv  MIG_Dumper_CPL.csv  UFI_Headless_BOM.csv  UFI_Mainboard_BOM.csv  UFI_Mainboard_CPL.csv
kicad/symbols/: UFI_Symbols.kicad_sym
modules/: README.md
modules/gb_gba_dumper/: CMakeLists.txt  SPECIFICATION.md
modules/gb_gba_dumper/include/: tusb_config.h
modules/gb_gba_dumper/src/: main.c
modules/mig_dumper/: CMakeLists.txt  SPECIFICATION.md
modules/mig_dumper/src/: main.c
modules/switch_cartridge/: SPECIFICATION.md
software/cm5/: setup.sh  ufi_processor.py
software/include/: mig_dumper.h
software/src/: mig_dumper.c
software/tools/: ufi-mig
software/web/api/: mig_api.py
software/web/components/: MIGDumperPanel.tsx
